2007-04-03  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/encoders/flv/flv.py: Stupid me !
	Fix Flash 7.

2007-04-03  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/encoders/flv/vp6.py: We need to chain
	up in do_setup. Thanks Mike ;-)

2007-04-03  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/encoders/flv/flv.xml: Rename the property
	to please thomasvs.
	* flumotion/component/encoders/flv/vp6.py: Check for the 
	encoder state configuration file in do_setup.

2007-04-03  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/encoders/flv/Makefile.am:
	* flumotion/component/encoders/flv/flv.py:
	* flumotion/component/encoders/flv/flv.xml:
	* flumotion/component/encoders/flv/vp6.py: Add a VP6 encoder
	component.

2007-03-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/mp3/mp3.py:
	  We verified that lame and mp3parse handle timestamp disconts,
	  and we fixed audioresample to handle them, and we tested
	  with dropping repeaters that stuff stays in sync.
	  So we remove audiorate again.

2007-03-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/flv.py:
	* flumotion/component/encoders/mp3/mp3.py:
	* flumotion/component/muxers/flv/flv.py:
	  check timestamps/offsets

2007-02-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/mp3/mp3.py:
	  Remove unneeded if statement.
	  Add audiorate, to compensate for lame's inability to deal with
	  dropped audio frames until lame gets fixed.
	  Tested with flumotion-launch audiotest-producer ! mp3-encoder !
	  flv-muxer ! disk-consumer directory=. rotate-type=none
	  to verify that it negotiates correctly.

2007-02-09  Michael Smith  <msmith@fluendo.com>

	* Makefile.am:
	* env:
	  Added new required file

	* flumotion/test/setup.py:
	  Removed generated file from svn

=== release 0.4.0 ===

2007-02-09  Michael Smith  <msmith@fluendo.com>

	* configure.ac: